--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Shopping </title>
+    <title>Shopping List</title>
     <link
     href="https://fonts.googleapis.com/css?family=McLaren|Montserrat&display=swap"
     rel="stylesheet"
